<?xml version="1.0"?>
<package format="3">
  <name>diffbot_hardware</name>
  <version>0.0.1</version>
  <description>Teensy diff drive hardware interface</description>

  <maintainer email="sittidech@example.com">sittidech</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <exec_depend>controller_manager</exec_depend>

  <export>
    <hardware_interface plugin="${prefix}/plugin.xml"/>
  </export>
</package>

